src/test/fail/check_line_numbers.lly
#[
SyntaxError: Cannot assign type 'string' to type 'integer'.
Where: File "test/fail/check_line_numbers.lly" at line 7
]#

var a = 10
a = "10"
